--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="icons/icon-192x192.png"
       type="image/x-icon"
     />
-
+    <link rel="manifest" href="manifest.json" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -57,5 +57,17 @@
 
     <script src="./js/index.js"></script>
     <script src="./js/db.js"></script>
+    <script>
+      (function () {
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker
+            .register("./worker.js")
+            .then(() => console.log("Service Worker registered successfully."))
+            .catch((error) =>
+              console.log("Service Worker registration failed:", error)
+            );
+        }
+      })();
+    </script>
   </body>
 </html>
